--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+  "dev": "next dev",
   "build": "next build",
   "postbuild": "echo > out/.nojekyll",
   "predeploy": "npm run build",
